--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
     <li class="center-text">
       <a class="block" href="#">
         <i class="icon i-96">
-          <svg><use xlink:href="images/dino-icons.svg#micropachyephalosaurus" /></svg>
+          <svg><use xlink:href="images/dino-icons.svg#micropachycephalosaurus" /></svg>
         </i>
-        <span class="block icon-text">Micropachyephalosaurus</span>
+        <span class="block icon-text">Micropachycephalosaurus</span>
       </a>
     </li>
     <li class="center-text">
